Bug 1451137: Make "next chunk starts with newline" flag a member variable to fix MOZ_ASSERT(). r=jorgk DONTBUILD