mailnews/imap/src/nsImapServerResponseParser.cpp
@@ -35,6 +35,7 @@ nsImapServerResponseParser::nsImapServerResponseParser(nsImapProtocol &imapProto
     fSelectedMailboxName(nullptr),
     fIMAPstate(kNonAuthenticated),
     fLastChunk(false),
+    fNextChunkStartsWithNewline(false),
     fServerConnection(imapProtocolConnection),
     fHostSessionList(nullptr)
 {
@@ -3086,7 +3087,6 @@ bool nsImapServerResponseParser::msg_fetch_literal(bool chunk, int32_t origin)
 #endif
 
   charsReadSoFar = 0;
-  static bool nextChunkStartsWithNewline = false;
 
   while (ContinueParse() && !fServerConnection.DeathSignalReceived() && (charsReadSoFar < numberOfCharsInThisChunk))
   {
@@ -3101,7 +3101,7 @@ bool nsImapServerResponseParser::msg_fetch_literal(bool chunk, int32_t origin)
       // '\r' is not inserted so the beginning line of the next chunk remains
       // just '\n' and no discard is required.
       // In any case, this "orphan" line is ignored and not processed below.
-      if (nextChunkStartsWithNewline && (*fCurrentLine == '\r'))
+      if (fNextChunkStartsWithNewline && (*fCurrentLine == '\r'))
       {
         // Cause fCurrentLine to point to '\n' which discards the '\r'.
         char *usableCurrentLine = PL_strdup(fCurrentLine + 1);
@@ -3169,8 +3169,8 @@ bool nsImapServerResponseParser::msg_fetch_literal(bool chunk, int32_t origin)
         char saveit2 = 0;  // Keep compiler happy.
         // Determine if EOL is split such that Chunk X has the \r and chunk
         // X+1 has the \n.
-        nextChunkStartsWithNewline = (displayEndOfLine[0] == '\r');
-        if (nextChunkStartsWithNewline)
+        fNextChunkStartsWithNewline = (displayEndOfLine[0] == '\r');
+        if (fNextChunkStartsWithNewline)
         {
           saveit2 = displayEndOfLine[2];
           // Add the missing newline and terminate the string.
@@ -3188,13 +3188,13 @@ bool nsImapServerResponseParser::msg_fetch_literal(bool chunk, int32_t origin)
         fServerConnection.HandleMessageDownLoadLine(fCurrentLine, !lastChunk);
         // Restore fCurrentLine's original content.
         displayEndOfLine[1] = saveit1;
-        if (nextChunkStartsWithNewline)
+        if (fNextChunkStartsWithNewline)
           displayEndOfLine[2] = saveit2;
       }
       else
       {
         // Not the last line of a chunk.
-        if (!nextChunkStartsWithNewline)
+        if (!fNextChunkStartsWithNewline)
         {
           // Process unmodified fCurrentLine string.
           fServerConnection.HandleMessageDownLoadLine(fCurrentLine,
@@ -3206,7 +3206,7 @@ bool nsImapServerResponseParser::msg_fetch_literal(bool chunk, int32_t origin)
           // Ignore the orphan '\n' on a line by itself.
           MOZ_ASSERT(strlen(fCurrentLine) == 1 && fCurrentLine[0] == '\n',
                      "Expect '\n' as only character in this line");
-          nextChunkStartsWithNewline = false;
+          fNextChunkStartsWithNewline = false;
         }
       }
     }
@@ -3229,7 +3229,7 @@ bool nsImapServerResponseParser::msg_fetch_literal(bool chunk, int32_t origin)
   }
   else
   {
-    nextChunkStartsWithNewline = false;
+    fNextChunkStartsWithNewline = false;
   }
   return lastChunk;
 }
